# ncmc

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
ncm2mp3_cli/: Cargo.toml
ncm2mp3_cli/src/: main.rs
ncm2mp3_lib/: Cargo.toml
ncm2mp3_lib/src/: error.rs  lib.rs
ncm_c/: Cargo.toml  README.md
ncm_c/src/: main.rs
ncmc/: Cargo.toml  README.md
ncmc/src/: main.rs
ncmc_lib/: Cargo.toml  README.md
ncmc_lib/src/: error.rs  lib.rs
