[workspace]
members = ["ncmc_lib", "ncmc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Louis <836250617@qq.com>"]
description = "convert ncm to mp3 or flac ..."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/fav"
documentation = ""

[workspace.dependencies]
ncmc_lib = { path = "ncmc_lib" }
thiserror = { version = "2.0.11" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
