[workspace]
members = ["ncmc_lib", "ncm_c"]
resolver = "2"

[workspace.package]
authors = ["Louis <836250617@qq.com>"]
description = "convert ncm to mp3 or flac ..."
license = "MIT"
edition = "2024"
repository = "https://github.com/kingwingfly/ncmc"

[workspace.dependencies]
thiserror = { version = "2.0.11" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
