[package]
name = "ncm_c"
version = "0.2.3"
edition.workspace = true
license.workspace = true
description = "convert ncm to mp3 or flac ..."
repository.workspace = true

[dependencies]
ncmc_lib = { path = "../ncmc_lib", version = "0.2.0", features = [
    "cover_download",
] }
clap = { version = "4.5.31", features = ["derive"] }
crossbeam = { version = "0.8.4" }
