[package]
name = "ncm_c"
version = "0.2.10"
edition.workspace = true
license.workspace = true
description = "convert ncm to mp3 or flac ..."
repository.workspace = true

[dependencies]
ncmc_lib = { path = "../ncmc_lib", version = "0.3", features = [
    "cover_download",
] }
clap = { version = "4.6", features = ["derive"] }
crossbeam-deque = { version = "0.8" }
