[package]
name = "ncmc_lib"
version = "0.3.1"
edition.workspace = true
license.workspace = true
description = "convert ncm to mp3 or flac ..."
documentation = "https://docs.rs/ncmc_lib"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { workspace = true }
id3 = { version = "1.16" }
aes = "0.9"
ecb = "0.2"
base64 = { version = "0.22" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ureq = { version = "3.2", optional = true }

[features]
default = []
cover_download = ["dep:ureq"]
